--- a/templates/base.html
+++ b/templates/base.html
@@ -15,6 +15,14 @@
     <span class="float-end">Hola {{ user.username }} | <a href="{% url 'logout' %}">Salir</a></span>
   </nav>
     <span class="badge bg-danger">{{ unread_count }}</span>
+
+  {% if messages %}
+    {% for m in messages %}
+      <div class="alert {{ m.tags }} alert-dismissible fade show">{{ m }}</div>
+    {% endfor %}
+  {% endif %}
+
   {% block content %}{% endblock %}
+
 </body>
 </html>
